python/tests/gold/envoylogtest/snapshots/ir.json
{
    "ambassador": {
        "_active": true,
        "_errored": false,
        "_finalized": true,
        "_referenced_by": [
            "envoylogtest.default.1"
        ],
        "_rkey": "envoylogtest.default.1",
        "admin_port": 8001,
        "debug_mode": false,
        "default_label_domain": "ambassador",
        "default_labels": {},
        "diag_port": 8877,
        "diagnostics": {
            "enabled": true,
            "prefix": "/ambassador/v0/",
            "rewrite": "/ambassador/v0/",
            "service": "127.0.0.1:8877"
        },
        "enable_http10": false,
        "enable_ipv4": true,
        "enable_ipv6": false,
        "envoy_log_format": "MY_REQUEST %RESPONSE_CODE% \"%REQ(:AUTHORITY)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%UPSTREAM_HOST%\"",
        "envoy_log_path": "/tmp/ambassador/ambassador.log",
        "envoy_log_type": "text",
        "kind": "IRAmbassador",
        "liveness_probe": {
            "enabled": true,
            "prefix": "/ambassador/v0/check_alive",
            "rewrite": "/ambassador/v0/check_alive",
            "service": "127.0.0.1:8877"
        },
        "location": "envoylogtest.default.1",
        "name": "ir.ambassador",
        "namespace": "default",
        "readiness_probe": {
            "enabled": true,
            "prefix": "/ambassador/v0/check_ready",
            "rewrite": "/ambassador/v0/check_ready",
            "service": "127.0.0.1:8877"
        },
        "server_name": "envoy",
        "service_port": 8080,
        "use_ambassador_namespace_for_service_resolution": false,
        "use_proxy_proto": false,
        "use_remote_address": true,
        "x_forwarded_proto_redirect": false,
        "xff_num_trusted_hops": 0
    },
    "clusters": {
        "cluster_127_0_0_1_8877": {
            "_active": true,
            "_errored": false,
            "_hostname": "127.0.0.1",
            "_namespace": "default",
            "_port": 8877,
            "_referenced_by": [
                "envoylogtest.default.1"
            ],
            "_resolver": "kubernetes-service",
            "_rkey": "cluster_127_0_0_1_8877",
            "connect_timeout_ms": 3000,
            "enable_endpoints": false,
            "enable_ipv4": true,
            "enable_ipv6": false,
            "ignore_cluster": false,
            "kind": "IRCluster",
            "lb_type": "round_robin",
            "location": "envoylogtest.default.1",
            "name": "cluster_127_0_0_1_8877",
            "namespace": "default",
            "service": "127.0.0.1:8877",
            "targets": [
                {
                    "ip": "127.0.0.1",
                    "port": 8877,
                    "target_kind": "IPaddr"
                }
            ],
            "type": "strict_dns",
            "urls": [
                "tcp://127.0.0.1:8877"
            ]
        }
    },
    "filters": [
        {
            "_active": true,
            "_errored": false,
            "_rkey": "ir.cors",
            "config": {},
            "kind": "ir.cors",
            "location": "--internal--",
            "name": "cors",
            "namespace": "default"
        },
        {
            "_active": true,
            "_errored": false,
            "_rkey": "ir.router",
            "config": {},
            "kind": "ir.router",
            "location": "--internal--",
            "name": "router",
            "namespace": "default",
            "type": "decoder"
        }
    ],
    "groups": [
        {
            "_active": true,
            "_errored": false,
            "_referenced_by": [
                "envoylogtest.default.1"
            ],
            "_rkey": "envoylogtest.default.1",
            "group_id": "b4db12f5b638f1750062dd4220911c4f6f44fc57",
            "group_weight": [
                0,
                26,
                0,
                "/ambassador/v0/check_ready",
                "GET"
            ],
            "headers": [],
            "kind": "IRHTTPMappingGroup",
            "location": "envoylogtest.default.1",
            "mappings": [
                {
                    "_active": true,
                    "_errored": false,
                    "_referenced_by": [
                        "envoylogtest.default.1"
                    ],
                    "_rkey": "envoylogtest.default.1",
                    "add_request_headers": {},
                    "cluster": {
                        "_active": true,
                        "_errored": false,
                        "_hostname": "127.0.0.1",
                        "_namespace": "default",
                        "_port": 8877,
                        "_referenced_by": [
                            "envoylogtest.default.1"
                        ],
                        "_resolver": "kubernetes-service",
                        "_rkey": "cluster_127_0_0_1_8877",
                        "connect_timeout_ms": 3000,
                        "enable_endpoints": false,
                        "enable_ipv4": true,
                        "enable_ipv6": false,
                        "ignore_cluster": false,
                        "kind": "IRCluster",
                        "lb_type": "round_robin",
                        "location": "envoylogtest.default.1",
                        "name": "cluster_127_0_0_1_8877",
                        "namespace": "default",
                        "service": "127.0.0.1:8877",
                        "targets": [
                            {
                                "ip": "127.0.0.1",
                                "port": 8877,
                                "target_kind": "IPaddr"
                            }
                        ],
                        "type": "strict_dns",
                        "urls": [
                            "tcp://127.0.0.1:8877"
                        ]
                    },
                    "group_id": "b4db12f5b638f1750062dd4220911c4f6f44fc57",
                    "headers": [],
                    "kind": "IRHTTPMapping",
                    "location": "envoylogtest.default.1",
                    "name": "internal_readiness_probe_mapping",
                    "namespace": "default",
                    "precedence": 0,
                    "prefix": "/ambassador/v0/check_ready",
                    "resolver": "kubernetes-service",
                    "rewrite": "/ambassador/v0/check_ready",
                    "route_weight": [
                        0,
                        26,
                        0,
                        "/ambassador/v0/check_ready",
                        "GET"
                    ],
                    "service": "127.0.0.1:8877",
                    "timeout_ms": 10000,
                    "weight": 100
                }
            ],
            "name": "GROUP: internal_readiness_probe_mapping",
            "namespace": "default",
            "precedence": 0,
            "prefix": "/ambassador/v0/check_ready",
            "rewrite": "/ambassador/v0/check_ready",
            "timeout_ms": 10000
        },
        {
            "_active": true,
            "_errored": false,
            "_referenced_by": [
                "envoylogtest.default.1"
            ],
            "_rkey": "envoylogtest.default.1",
            "group_id": "7df546235997704c909d473af2cbcb5e606d20de",
            "group_weight": [
                0,
                26,
                0,
                "/ambassador/v0/check_alive",
                "GET"
            ],
            "headers": [],
            "kind": "IRHTTPMappingGroup",
            "location": "envoylogtest.default.1",
            "mappings": [
                {
                    "_active": true,
                    "_errored": false,
                    "_referenced_by": [
                        "envoylogtest.default.1"
                    ],
                    "_rkey": "envoylogtest.default.1",
                    "add_request_headers": {},
                    "cluster": {
                        "_active": true,
                        "_errored": false,
                        "_hostname": "127.0.0.1",
                        "_namespace": "default",
                        "_port": 8877,
                        "_referenced_by": [
                            "envoylogtest.default.1"
                        ],
                        "_resolver": "kubernetes-service",
                        "_rkey": "cluster_127_0_0_1_8877",
                        "connect_timeout_ms": 3000,
                        "enable_endpoints": false,
                        "enable_ipv4": true,
                        "enable_ipv6": false,
                        "ignore_cluster": false,
                        "kind": "IRCluster",
                        "lb_type": "round_robin",
                        "location": "envoylogtest.default.1",
                        "name": "cluster_127_0_0_1_8877",
                        "namespace": "default",
                        "service": "127.0.0.1:8877",
                        "targets": [
                            {
                                "ip": "127.0.0.1",
                                "port": 8877,
                                "target_kind": "IPaddr"
                            }
                        ],
                        "type": "strict_dns",
                        "urls": [
                            "tcp://127.0.0.1:8877"
                        ]
                    },
                    "group_id": "7df546235997704c909d473af2cbcb5e606d20de",
                    "headers": [],
                    "kind": "IRHTTPMapping",
                    "location": "envoylogtest.default.1",
                    "name": "internal_liveness_probe_mapping",
                    "namespace": "default",
                    "precedence": 0,
                    "prefix": "/ambassador/v0/check_alive",
                    "resolver": "kubernetes-service",
                    "rewrite": "/ambassador/v0/check_alive",
                    "route_weight": [
                        0,
                        26,
                        0,
                        "/ambassador/v0/check_alive",
                        "GET"
                    ],
                    "service": "127.0.0.1:8877",
                    "timeout_ms": 10000,
                    "weight": 100
                }
            ],
            "name": "GROUP: internal_liveness_probe_mapping",
            "namespace": "default",
            "precedence": 0,
            "prefix": "/ambassador/v0/check_alive",
            "rewrite": "/ambassador/v0/check_alive",
            "timeout_ms": 10000
        },
        {
            "_active": true,
            "_errored": false,
            "_referenced_by": [
                "envoylogtest.default.1"
            ],
            "_rkey": "envoylogtest.default.1",
            "group_id": "8de18501d2044fe30db225289b318d5fda913b64",
            "group_weight": [
                0,
                15,
                0,
                "/ambassador/v0/",
                "GET"
            ],
            "headers": [],
            "kind": "IRHTTPMappingGroup",
            "location": "envoylogtest.default.1",
            "mappings": [
                {
                    "_active": true,
                    "_errored": false,
                    "_referenced_by": [
                        "envoylogtest.default.1"
                    ],
                    "_rkey": "envoylogtest.default.1",
                    "add_request_headers": {},
                    "cluster": {
                        "_active": true,
                        "_errored": false,
                        "_hostname": "127.0.0.1",
                        "_namespace": "default",
                        "_port": 8877,
                        "_referenced_by": [
                            "envoylogtest.default.1"
                        ],
                        "_resolver": "kubernetes-service",
                        "_rkey": "cluster_127_0_0_1_8877",
                        "connect_timeout_ms": 3000,
                        "enable_endpoints": false,
                        "enable_ipv4": true,
                        "enable_ipv6": false,
                        "ignore_cluster": false,
                        "kind": "IRCluster",
                        "lb_type": "round_robin",
                        "location": "envoylogtest.default.1",
                        "name": "cluster_127_0_0_1_8877",
                        "namespace": "default",
                        "service": "127.0.0.1:8877",
                        "targets": [
                            {
                                "ip": "127.0.0.1",
                                "port": 8877,
                                "target_kind": "IPaddr"
                            }
                        ],
                        "type": "strict_dns",
                        "urls": [
                            "tcp://127.0.0.1:8877"
                        ]
                    },
                    "group_id": "8de18501d2044fe30db225289b318d5fda913b64",
                    "headers": [],
                    "kind": "IRHTTPMapping",
                    "location": "envoylogtest.default.1",
                    "name": "internal_diagnostics_probe_mapping",
                    "namespace": "default",
                    "precedence": 0,
                    "prefix": "/ambassador/v0/",
                    "resolver": "kubernetes-service",
                    "rewrite": "/ambassador/v0/",
                    "route_weight": [
                        0,
                        15,
                        0,
                        "/ambassador/v0/",
                        "GET"
                    ],
                    "service": "127.0.0.1:8877",
                    "timeout_ms": 10000,
                    "weight": 100
                }
            ],
            "name": "GROUP: internal_diagnostics_probe_mapping",
            "namespace": "default",
            "precedence": 0,
            "prefix": "/ambassador/v0/",
            "rewrite": "/ambassador/v0/",
            "timeout_ms": 10000
        }
    ],
    "grpc_services": {},
    "hosts": [],
    "identity": {
        "ambassador_id": "envoylogtest",
        "ambassador_namespace": "default",
        "ambassador_nodename": "envoylogtest-default"
    },
    "k8s_status_updates": {},
    "listeners": [
        {
            "_active": true,
            "_errored": false,
            "_rkey": "ir.listener",
            "hostname": "*",
            "insecure_action": "Route",
            "kind": "IRListener",
            "location": "envoylogtest.default.1",
            "name": "ir.listener",
            "namespace": "default",
            "redirect_listener": false,
            "require_tls": false,
            "secure_action": "Route",
            "service_port": 8080,
            "use_proxy_proto": false
        }
    ],
    "services": {
        "k8s-envoylogtest-admin-default": {
            "_referenced_by": {},
            "ambassador_id": "envoylogtest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-envoylogtest-admin-default",
            "metadata_labels": {
                "kat-ambassador-id": "envoylogtest",
                "scope": "AmbassadorTest",
                "service": "envoylogtest-admin"
            },
            "name": "envoylogtest-admin",
            "namespace": "default",
            "rkey": "k8s-envoylogtest-admin-default",
            "serialization": "ambassador_id: envoylogtest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: envoylogtest\n  scope: AmbassadorTest\n  service: envoylogtest-admin\nname: envoylogtest-admin\nnamespace: default\n"
        },
        "k8s-envoylogtest-default": {
            "_referenced_by": {},
            "ambassador_id": "envoylogtest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-envoylogtest-default",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "envoylogtest",
                "scope": "AmbassadorTest"
            },
            "name": "envoylogtest",
            "namespace": "default",
            "rkey": "k8s-envoylogtest-default",
            "serialization": "ambassador_id: envoylogtest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: envoylogtest\n  scope: AmbassadorTest\nname: envoylogtest\nnamespace: default\n"
        },
        "k8s-envoylogtest-http-default": {
            "_referenced_by": {},
            "ambassador_id": "envoylogtest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-envoylogtest-http-default",
            "metadata_labels": {
                "kat-ambassador-id": "envoylogtest",
                "scope": "AmbassadorTest"
            },
            "name": "envoylogtest-http",
            "namespace": "default",
            "rkey": "k8s-envoylogtest-http-default",
            "serialization": "ambassador_id: envoylogtest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: envoylogtest\n  scope: AmbassadorTest\nname: envoylogtest-http\nnamespace: default\n"
        }
    },
    "tls_contexts": []
}
